kubernetes/karsajobs-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karsajobs
  labels:
    app: karsajobs
