kubernetes/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Mendefinisikan name dan label sebagai penanda
  name: order
  labels:
    app: order
    tier: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: producer
  template:
    metadata:
      labels:
        app: order
        tier: producer
    spec:
      # Mendefiniskan container dan mengunduh image dari github repo
      containers:
        - name: order
          image: ghcr.io/indra-yana/order-service:latest
          ports:
            - containerPort: 3000
          # Mendefinisikan environment variabel yang digunakan aplikasi
