kubernetes/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Mendefinisikan name dan label sebagai penanda
  name: shipping
  labels:
    app: shipping
    tier: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: consumer
  template:
    metadata:
      labels:
        app: shipping
        tier: consumer
    spec:
      # Mendefiniskan container dan mengunduh image dari github repo
      containers:
        - name: shipping
          image: ghcr.io/indra-yana/shipping-service:latest
          ports:
            - containerPort: 3001
          # Mendefinisikan environment variabel yang digunakan aplikasi
