kubernetes/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  # Mendefiniskan label
  labels:
    app: producer
    service: order
spec:
  type: NodePort
  ports:
    - port: 3000
      name: http
  # Mendefinsikan selector untuk pod
  selector:
    app: order
